--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,9 @@
   <url>http://maven.apache.org</url>
   <properties>
     <tomcat.version>8.5.2</tomcat.version>
+    <maven.compiler.source>1.6</maven.compiler.source>
+    <maven.compiler.target>1.6</maven.compiler.target>
+  </properties>
   </properties>
   <dependencies>
     <dependency>
