--- a/app.json
+++ b/app.json
@@ -12,6 +12,7 @@
 	  "SALESFORCE_HEROKUAPP_URL":"HEROKUAPP_URL_HERE",
 	  "SALESFORCE_MODE":"modal",
 	  "SALESFORCE_FORGOT_PASSWORD_ENABLED":"true",
-	  "SALESFORCE_SELF_REGISTER_ENABLED":"false"
+	  "SALESFORCE_SELF_REGISTER_ENABLED":"false",
+	  "CACERTS_PASSWORD":"PASSWORD"
 	  }
 }
